gitops/apps/development/pihole/scaleway/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        cfke.io/provider: scaleway
        cfke.io/zone: nl-ams-1
      containers:
        - name: pihole
