gitops/apps/development/pihole/scaleway/patch-tailscale-dns-hostname.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  annotations:
    tailscale.com/hostname: "pihole-dns-scaleway"
